Edit the text in work page, make better describing project card

--- a/work.html
+++ b/work.html
@@ -36,7 +36,7 @@
 					<a href="index">Home </a>
 					<a href="about">About</a>
 					<a href="work">Work</a>
-					<a href="contact">Contact</a>
+					<a href="contact">Contacts</a>
 				</div>
 			</div>
 		</nav>
@@ -46,21 +46,29 @@
 		<div class="project-list">
 			<div class="project-list__item">
 				<img src="img/website-portfolio-poster.png" class="project-list__img img" alt="picture illustrates the website-portfolio project">
-				<h2>My Portfolio</h2>
+				<h2>My Website Portfolio</h2>
 				<p>
-					Yes, the very one you're looking at! <br>
-					I wrote from scratch this web site, implementing various skills I gained like CSS processors, SEO optimization, HTML semantics and
-					mobile responsiveness have a look at the code for more details
+					The very one you're looking at! <br>
+					I wrote my own portfolio from scratch using only HTML5 without the aid of third party libraries.
+					I took care of all aspects from the page designing(link to Adobe DX file)  to the building stage,
+					implementing various skills I gained like CSS processors, SEO optimization, HTML semantics,
+					mobile responsiveness and more
+					<br><br>
+					Have a look at the code for more details!
 				</p>
 				<a class="button" href="https://github.com/Funkateer/website-portfolio" target="_blank">Code</a>
 			</div>
 
 			<div class="project-list__item">
 				<img src="img/Cineteca-poster.png" class="project-list__img img" alt="picture illustrates the Cineteca project">
-				<h2>Cineteca app a RESTful API</h2>
+				<h2>Movies RESTful API</h2>
 				<p>
-					A complete web app that allows users to create their personal profile, search and save info on movies.
-					Server-side created with Node.js, uses custom made RESTful API. Client-side created using REACT and Bootstrap.
+					A web app that allows users to login to their profile, search and displays list of movies,
+					info like plot genre and director. Users can also add movies to their Favorite Movies list and
+					change their profile info or cancel the account .  Back-end is built using Node.js and Express,
+					hooked to a local RESTful API. Front-end build with REACT and Bootstrap, the app was deployed on Heroku
+					<br><br>
+					Have a look at the code for more detailed list of technologies used for this app!
 				</p>
 				<a class="button" href="https://cineteca.herokuapp.com/" target="_blank">Project</a>
 				<a class="button" href="https://github.com/Funkateer/movie_api" target="_blank">Code</a>
@@ -68,10 +76,17 @@
 
 			<div class="project-list__item">
 				<img src="img/meetup-poster.png" class="project-list__img img" alt="picture illustrates the Meetup app built with React">
-				<h2>Meetup app </h2>
+				<h2>Meetup App </h2>
 				<p>
-					A serverless, progressive web application (PWA) built with React using a test-driven development TDD technique.
-					The application uses the Meetup API to fetch upcoming events for a selected city.
+					This server-less, progressive web application can be downloaded and installed, the splash-screen
+					view makes it look identical to a normal mobile app! <br>
+					Uses the <a href="https://www.meetup.com/it-IT/meetup_api/" target="_blank">Meetup</a> API
+					to fetch upcoming events visualized in plot or pie charts and much more. <br>
+					The app is built with a test-driven development method using Jest and Puppeteers libraries for
+					<a href="https://github.com/Funkateer/meetup/tree/master/src/__tests__" target="_blank">tests</a>,
+					the back-end functions are hosted in AWS
+					<br><br>
+					Have a look at the code for more details or try the deployed app!
 				</p>
 				<a class="button" href="https://funkateer.github.io/meetup/" target="_blank">Project</a>
 				<a class="button" href="https://github.com/Funkateer/meetup" target="_blank">Code</a>
@@ -81,19 +96,26 @@
 				<img src="img/shatApp-poster.png" class="project-list__img img" alt="picture illustrates the chat app built with Native React">
 				<h2>shatApp</h2>
 				<p>
-					An introvert React Native app, by using <a href="https://github.com/FaridSafi/react-native-gifted-chat" target="_blank">react-native-gifted-chat</a>
-					I build a chatting app that provides users with a full functioning chat interface that send receives messages, store them locally so it's  usable
-					offline and the possibility to share images and their location.
+					An introvert React-Native app for both iOs and Android devices, provides users with a full functioning chat that sends and receives messages,
+					store them locally so it's usable offline and has the feature to share images and location.The app interface is build with Gifted-Chat Library
+					and other react-native libraries for the different features, Google firebase as database,
+					<a href="https://github.com/Funkateer/shatApp/tree/master/out" target="_blank">Documentations</a>
+					are auto generated using JSDoc and finally Expo for building and testing
+					<br><br>
+					Have a look at the code for more details!
 				</p>
 				<a class="button" href="https://github.com/Funkateer/shatApp" target="_blank">Code</a>
 			</div>
 
 			<div class="project-list__item">
 				<img src="img/campGround-poster.png" class="project-list__img img" alt="picture illustrates the Yelp like project called campGround">
-				<h2>campGround</h2>
+				<h2>campGrounds</h2>
 				<p>
-					campGround is a YELP like app, users are able to log in add and rate camping grounds they visited or want to advertise to other camping enthusiasts! <br>
-					Users are also able to add edit or delete their own comments in a CRUD fashion
+					CampGrounds is a YELP-like web app, users are able to log in add and rate camping grounds they visited or advertise to other camping enthusiasts!
+					Users are also able to login and add edit or delete their comments in a CRUD fashion. Front-end is build with Js and Bootstrap,
+					the back-end is build with Node.js and Express
+					<br><br>
+					Have a look at the code for more details!
 				</p>
 				<a class="button" href="https://desolate-journey-34527.herokuapp.com/" target="_blank">Project</a>
 				<a class="button" href="https://github.com/Funkateer/campGround" target="_blank">Code</a>
@@ -101,9 +123,13 @@
 
 			<div class="project-list__item">
 				<img src="img/quiz-app-poster.png" class="project-list__img img" alt="picture illustrates the quiz app built with Angular">
-				<h2>Quiz app</h2>
+				<h2>Quiz App</h2>
 				<p>
-					Quiz app built using Angular Js and Angular <a href="https://material.angular.io/">Material</a> for the stylings
+					A simple French and Math quiz app! Although simple this app shows my interest in diverse frameworks,
+					since I build it using the powerful Angular2 framework and used Angular and styled using <a href="https://material.angular.io/">Material</a>
+					<br><br>
+					Have a look at the code for more details!
+
 				</p>
 				<a class="button" href="https://funkateer.github.io/quiz-app/welcome" target="_blank">Project</a>
 				<a class="button" href="https://github.com/Funkateer/quiz-app" target="_blank">Code</a>
@@ -111,10 +137,12 @@
 
 			<div class="project-list__item">
 				<img src="img/toVue-list-poster.png" class="project-list__img img" alt="picture illustrates the todo list app built with Vue">
-				<h2>ToVue list</h2>
+				<h2>ToVue List</h2>
 				<p>
-					A todo list using the super awesome Vue framework and <a href="https://material.angular.io/">Material</a> for the stylings
-					have a look ..
+					The evergreen todo list app, for such simple and popular tasks I decided to use the super awesome Vue library.
+					I loved Vue’s workflow and I’m looking forward to using it again. I used Material for the styling
+					<br><br>
+					Have a look at the code for more details!
 				</p>
 				<a class="button" href="https://funkateer.github.io/toVue-list/" target="_blank">Project</a>
 				<a class="button" href="https://github.com/Funkateer/toVue-list" target="_blank">Code</a>
@@ -122,22 +150,27 @@
 
 			<div class="project-list__item">
 				<img src="img/Pokemon-simple-js-app-poster.png" class="project-list__img img" alt="picture illustrates the Pokemon simple-js app project">
-				<h2>Simple JS Pokedex-app</h2>
+				<h2>Pokedex Js App</h2>
 				<p>
-					In this app with help of APIs I used vanilla Javascript to fetch and display details about Pokémons, I also made a clone where all the Javascript logic was replaced by jQuery and Bootstrap 4! <br>
-					have a look
+					With the help of an APIs I used vanilla Javascript to fetch and display modal cards with info and details about Pokémons.
+					I also made a <a href="https://funkateer.github.io/Pokedex-jQuery-app/">clone of this app</a> where all the Javascript logic and CSS was replaced
+					by jQuery and Bootstrap 4!
+					<br><br>
+					Have a look at both app versions code for more details!
 				</p>
-				<a class="button" href="https://funkateer.github.io/Pokedex-jQuery-app/" target="_blank">Project</a>
+				<a class="button" href="https://funkateer.github.io/Pokedex-simple-js-app/" target="_blank">Project</a>
 				<a class="button" href="https://github.com/Funkateer/Pokedex-simple-js-app" target="_blank">JS Code</a>
 				<a class="button" href="https://github.com/Funkateer/Pokedex-jQuery-app" target="_blank">jQuery Code</a>
 			</div>
 
 			<div class="project-list__item">
 				<img src="img/colorGame-poster.png" class="project-list__img img" alt="picture illustrates the color game project">
-				<h2>RGB Color guessing game</h2>
+				<h2>RGB Color Game</h2>
 				<p>
-					I used vanilla Javascript to build a game where you guess the color of random RGB value between 3 or 9 colors whether
-					playing in easy or hard mode, plus a side page where you can add RGB value and look at the corresponding color
+					A vanilla Javascript game where you guess the color of random RGB value choosing between 3 or 9 possible colors whether playing in easy or hard mode,
+					it’s a fun way to practice the RGB parameters!
+					<br><br>
+					Have a look at the code for more little things!
 				</p>
 				<a class="button" href=" https://funkateer.github.io/colorGame" target="_blank">Project</a>
 				<a class="button" href="https://github.com/Funkateer/colorGame" target="_blank">Code</a>
@@ -147,19 +180,21 @@
 				<img src="img/circles-poster.png" class="project-list__img img" alt="picture illustrates the circles game project">
 				<h2>Circles</h2>
 				<p>
-					A simple but fun app where each key of the keyboard generate a random colored expanding dot on the screen and a sound,
-					I used two libraries paper-full for the shapes and howler for sound effects
+					Using visual and sound effect I made this fun app, the keyboard generate a colored expanding dot on the screen and a paired sound,
+					it can get pretty addicting if you start to feel the beat! I used paper-full library to generate the shapes and howler for the sounds
+					<br><br>
+					Have a look at the code for more details!
 				</p>
 				<a class="button hideFromMobile" href="https://funkateer.github.io/circles" target="_blank">Project</a>
 				<a class="button" href="https://github.com/Funkateer/circles" target="_blank">Code</a>
 			</div>
 
 			<div class="project-list__item">
-				<h2>Your project</h2>
+				<h2>Your Project</h2>
 				<p>
-					I'm eager to be part of a developers team which I believe is the best way to elevate my skills and becoming a better developer,
-					have a look at my <a href="AlaEddin-Abugrara-CV" target="_blank">CV</a>
-					for a listed and more detailed formation about my skills and experiences
+					I'm eager to be part of a developer team, I believe this is the best way to grow and become a better developer.
+					Have a look at my <a href="AlaEddin-Abugrara-CV" target="_blank">CV</a>
+					for a more detailed formation about my skills and experiences
 				</p>
 				<a href="contact" class="button">Lets get in touch</a>
 			</div>
