--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					<a href="index">Home </a>
 					<a href="about">About</a>
 					<a href="work">Work</a>
-					<a href="contact">Contact</a>
+					<a href="contact">Contacts</a>
 				</div>
 		  </div>
 		</nav>
