--- a/AlaEddin-Abugrara-CV.html
+++ b/AlaEddin-Abugrara-CV.html
@@ -31,7 +31,7 @@
           <a href="index">Home </a>
           <a href="about">About</a>
           <a href="work">Work</a>
-          <a href="contact">Contact</a>
+          <a href="contact">Contacts</a>
         </div>
       </div>
     </nav>
