--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
 					<a href="index">Home </a>
 					<a href="about">About</a>
 					<a href="work">Work</a>
-					<a href="contact">Contact</a>
+					<a href="contact">Contacts</a>
 				</div>
 			</div>
 		</nav>
@@ -45,29 +45,39 @@
 		<section class="contact-item">
 			<h1 class="contact-container__header">MY CONTACTS</h1>
 			Ala Eddin Abugrara <br>
-			Schleißheimer Straße <br>
+			Schleissheimer Str. <br>
 			80797 Munich <br>
 			Germany <br>
 			<br>
-			Tel <a href="tel:+491234567">+49 176 36369374‬</a> <br>
-			Skype <a href="skype:alaabugrara?userinfo"> alaabugrara</a> <br>
-			Mail <a href="mailto:alaeddin.abugrara@gmail.com">alaeddin.abugrara(at)gmail.com</a> <br>
+			Tel: <a href="tel:+491234567">+49 176 36369374‬</a> <br>
+			Skype: <a href="skype:alaabugrara?userinfo"> alaabugrara</a> <br>
+			Mail: <a href="mailto:alaeddin.abugrara@gmail.com">alaeddin.abugrara(at)gmail.com</a> <br>
 		</section>
+		<br>
+		
+		<div>
+			<a href="https://github.com/Funkateer" title="Github" target="_blank"><img class="social-img" src="img/githubIcon.svg" alt="Github"></a>
+			<a href="https://twitter.com/Funk4teer" title="twitter" target="_blank"><img class="social-img" src="img/twitterIcon.svg" alt="Twitter"></a>
+			<a href="https://www.linkedin.com/in/al%C3%A0-eddin-abugrara-214ba5115/" title="Linked-in" target="_blank"><img class="social-img" src="img/linkedinIcon.svg" alt="LinkedIn"></a>
+		</div>
+		<br>
+
 		<form action="https://www.enformed.io/bbi7dw5v" method="POST" id="gform" class="contact-item">
-			<h2>Get in touch:</h2>
-		   <div>
-				<label class="standard-label" for="contact-email">Email: <span class="legend">(required)</span></label> <br>
-				<input name="input" id="contact-email" type="email" required>
-		   </div>
-			<br>
+			<h2>Get in touch</h2>
 			<div>
-				<label class="standard-label" for="contact-tel">Telephone: </label> <br>
-				<input name="Telephone" id="contact-tel" type="tel">
+			<label class="standard-label" for="contact-email">Email <span class="legend">(required)</span></label> <br>
+			<input name="input" id="contact-email" type="email" required>
 			</div>
 			<br>
+
+			<div>
+				<label class="standard-label" for="contact-tel">Telephone </label> <br>
+				<input name="Telephone" id="contact-tel" type="tel">
+			</div>
+
 			<div class="messageSent">Your message has been sent</div>
 			<div>
-				<label class="standard-label last" for="contact-mes" >Message: <span class="legend">(required)</span> </label><br>
+				<label class="standard-label last" for="contact-mes" >Message <span class="legend">(required)</span> </label><br>
 				<textarea name="textarea" id="contact-mes" required maxlength="240" placeholder="240 characters left"></textarea>
 			</div>
 			<br>
@@ -78,12 +88,7 @@
 
 		</form>
 	</div>
-	<footer>
-		<p>Find me on</p>
-		<a href="https://github.com/Funkateer" target="_blank"><img class="social-img" src="img/githubIcon.svg" alt="Github"></a>
-		<a href="https://twitter.com/Funk4teer" target="_blank"><img class="social-img" src="img/twitterIcon.svg" alt="Twitter"></a>
-		<a href="https://www.linkedin.com/in/al%C3%A0-eddin-abugrara-214ba5115/" target="_blank"><img class="social-img" src="img/linkedinIcon.svg" alt="LinkedIn"></a>
-	</footer>
+
 	<!-- <script src="dist/js/scripts.min.js"></script> -->
 	<script src="js/scripts.js"></script>
 	<!-- <script src="js/HTTPresponse.js"></script> -->
