--- a/AlaEddin-Abugrara-CV.html
+++ b/AlaEddin-Abugrara-CV.html
@@ -13,11 +13,12 @@
 </head>
 <body>
   <header class="page-header">
-    <a href="index"> <img src="img/logo.png" alt="personal logo" class="page-header__item navigation__logo img"></a>
-    <a href="index" class="namelogo">
-      <span class="namelogo-name">ALA EDDIN ABUGRARA</span><br>
-      <span class="namelogo-caption">Web Developer </span>
-    </a>
+		<a href="index"> <img src="img/logo.png" alt="personal logo" class="page-header__item navigation__logo img">
+			<div class="namelogo">
+				<span class="namelogo-name">ALA EDDIN ABUGRARA</span><br>
+				<span class="namelogo-caption">Web Developer </span>
+			</div>
+		</a>
     <nav class="main-navigation page-header__item">
         <ul role="menubar" class="navigation-list">
         <li><a href="index" role="menuitem" class="navigation-list__item">Home</a></li>
