--- a/about.html
+++ b/about.html
@@ -21,10 +21,11 @@
 </head>
 <body>
   <header class="page-header">
-	  <a href="index"> <img src="img/logo.png" alt="personal logo" class="page-header__item navigation__logo"></a>
-	  <a href="index" class="namelogo">
-			<span class="namelogo-name">ALA EDDIN ABUGRARA</span><br>
-			<span class="namelogo-caption">Web Developer </span>
+		<a href="index"> <img src="img/logo.png" alt="personal logo" class="page-header__item navigation__logo img">
+			<div class="namelogo">
+				<span class="namelogo-name">ALA EDDIN ABUGRARA</span><br>
+				<span class="namelogo-caption">Web Developer </span>
+			</div>
 		</a>
 	  <nav class="main-navigation page-header__item">
 		  <ul role="menubar" class="navigation-list">
