add link to Adobe XD file inside my portfolio card in to work.html

--- a/work.html
+++ b/work.html
@@ -18,10 +18,11 @@
 </head>
 <body>
 	<header class="page-header">
-		<a href="index"> <img src="img/logo.png" alt="personal logo" class="page-header__item navigation__logo img"></a>
-		<a href="index" class="namelogo">
-			<span class="namelogo-name">ALA EDDIN ABUGRARA</span><br>
-			<span class="namelogo-caption">Web Developer </span>
+		<a href="index"> <img src="img/logo.png" alt="personal logo" class="page-header__item navigation__logo img">
+			<div class="namelogo">
+				<span class="namelogo-name">ALA EDDIN ABUGRARA</span><br>
+				<span class="namelogo-caption">Web Developer </span>
+			</div>
 		</a>
 		<nav class="main-navigation page-header__item">
 		   <ul role="menubar" class="navigation-list">
@@ -50,8 +51,8 @@
 				<p>
 					The very one you're looking at! <br>
 					I wrote my own portfolio from scratch using only HTML5 without the aid of third party libraries.
-					I took care of all aspects from the page designing(link to Adobe DX file)  to the building stage,
-					implementing various skills I gained like CSS processors, SEO optimization, HTML semantics,
+					I took care of all aspects from the page <a href="file/Portfolio-UI.xd" download >designing</a>
+					to the building stage, implementing various skills I gained like CSS processors, SEO optimization, HTML semantics,
 					mobile responsiveness and more
 					<br><br>
 					Have a look at the code for more details!
@@ -190,10 +191,11 @@
 			</div>
 
 			<div class="project-list__item">
+				<img src="img/yourProject-poster1.jpeg" class="project-list__img img" alt="picture illustrates a boat on a calm sea">
 				<h2>Your Project</h2>
 				<p>
 					I'm eager to be part of a developer team, I believe this is the best way to grow and become a better developer.
-					Have a look at my <a href="AlaEddin-Abugrara-CV" target="_blank">CV</a>
+					Have a look at <a href="AlaEddin-Abugrara-CV" target="_blank">my CV</a>
 					for a more detailed formation about my skills and experiences
 				</p>
 				<a href="contact" class="button">Lets get in touch</a>
