fix logo and name in nav bar, trim projects img, add img to last project

--- a/work.html
+++ b/work.html
@@ -18,11 +18,10 @@
 </head>
 <body>
 	<header class="page-header">
-		<a href="index"> <img src="img/logo.png" alt="personal logo" class="page-header__item navigation__logo img">
-			<div class="namelogo">
-				<span class="namelogo-name">ALA EDDIN ABUGRARA</span><br>
-				<span class="namelogo-caption">Web Developer </span>
-			</div>
+		<a href="index" class="my-logo">
+			<img src="img/logo.png" alt="personal logo" class="page-header__item navigation__logo img">
+			<span class="logo-name">ALA EDDIN ABUGRARA</span><br>
+			<span class="logo-caption">Web Developer </span>
 		</a>
 		<nav class="main-navigation page-header__item">
 		   <ul role="menubar" class="navigation-list">
@@ -57,6 +56,7 @@
 					<br><br>
 					Have a look at the code for more details!
 				</p>
+				<br>
 				<a class="button" href="https://github.com/Funkateer/website-portfolio" target="_blank">Code</a>
 			</div>
 
@@ -64,13 +64,14 @@
 				<img src="img/Cineteca-poster.png" class="project-list__img img" alt="picture illustrates the Cineteca project">
 				<h2>Movies RESTful API</h2>
 				<p>
-					A web app that allows users to login to their profile, search and displays list of movies,
+					A web app that allows to login to their profile, search and displays list of movies,
 					info like plot genre and director. Users can also add movies to their Favorite Movies list and
-					change their profile info or cancel the account .  Back-end is built using Node.js and Express,
-					hooked to a local RESTful API. Front-end build with REACT and Bootstrap, the app was deployed on Heroku
+					change their profile info or cancel the account . Back-end is built using Node.js and Express,
+					hooked to a local API. Front-end build with REACT and Bootstrap, the app was deployed on Heroku
 					<br><br>
 					Have a look at the code for more detailed list of technologies used for this app!
 				</p>
+				<br>
 				<a class="button" href="https://cineteca.herokuapp.com/" target="_blank">Project</a>
 				<a class="button" href="https://github.com/Funkateer/movie_api" target="_blank">Code</a>
 			</div>
@@ -79,16 +80,16 @@
 				<img src="img/meetup-poster.png" class="project-list__img img" alt="picture illustrates the Meetup app built with React">
 				<h2>Meetup App </h2>
 				<p>
-					This server-less, progressive web application can be downloaded and installed, the splash-screen
-					view makes it look identical to a normal mobile app! <br>
-					Uses the <a href="https://www.meetup.com/it-IT/meetup_api/" target="_blank">Meetup</a> API
-					to fetch upcoming events visualized in plot or pie charts and much more. <br>
-					The app is built with a test-driven development method using Jest and Puppeteers libraries for
+					This progressive web application can be downloaded so it looks identical to a normal mobile app,
+					uses the <a href="https://www.meetup.com/it-IT/meetup_api/" target="_blank">Meetup</a>
+					API to fetch upcoming events visualized in plot or pie charts and much more. <br>
+					The app is built with a test-driven development method using Jest and Puppeteers for
 					<a href="https://github.com/Funkateer/meetup/tree/master/src/__tests__" target="_blank">tests</a>,
 					the back-end functions are hosted in AWS
 					<br><br>
 					Have a look at the code for more details or try the deployed app!
 				</p>
+				<br>
 				<a class="button" href="https://funkateer.github.io/meetup/" target="_blank">Project</a>
 				<a class="button" href="https://github.com/Funkateer/meetup" target="_blank">Code</a>
 			</div>
@@ -97,7 +98,7 @@
 				<img src="img/shatApp-poster.png" class="project-list__img img" alt="picture illustrates the chat app built with Native React">
 				<h2>shatApp</h2>
 				<p>
-					An introvert React-Native app for both iOs and Android devices, provides users with a full functioning chat that sends and receives messages,
+					An introvert React-Native app for both iOs and Android devices, provides with a full functioning chat that sends and receives messages,
 					store them locally so it's usable offline and has the feature to share images and location.The app interface is build with Gifted-Chat Library
 					and other react-native libraries for the different features, Google firebase as database,
 					<a href="https://github.com/Funkateer/shatApp/tree/master/out" target="_blank">Documentations</a>
@@ -105,6 +106,7 @@
 					<br><br>
 					Have a look at the code for more details!
 				</p>
+				<br>
 				<a class="button" href="https://github.com/Funkateer/shatApp" target="_blank">Code</a>
 			</div>
 
@@ -112,12 +114,13 @@
 				<img src="img/campGround-poster.png" class="project-list__img img" alt="picture illustrates the Yelp like project called campGround">
 				<h2>campGrounds</h2>
 				<p>
-					CampGrounds is a YELP-like web app, users are able to log in add and rate camping grounds they visited or advertise to other camping enthusiasts!
-					Users are also able to login and add edit or delete their comments in a CRUD fashion. Front-end is build with Js and Bootstrap,
+					CampGrounds is a YELP-like web app, Users can log in add and rate camping grounds they visited or advertise to other camping enthusiasts!
+					Users can also add edit or delete their comments in a CRUD fashion. Front-end is build with Js and Bootstrap,
 					the back-end is build with Node.js and Express
 					<br><br>
 					Have a look at the code for more details!
 				</p>
+				<br>
 				<a class="button" href="https://desolate-journey-34527.herokuapp.com/" target="_blank">Project</a>
 				<a class="button" href="https://github.com/Funkateer/campGround" target="_blank">Code</a>
 			</div>
@@ -130,8 +133,8 @@
 					since I build it using the powerful Angular2 framework and used Angular and styled using <a href="https://material.angular.io/">Material</a>
 					<br><br>
 					Have a look at the code for more details!
-
 				</p>
+				<br>
 				<a class="button" href="https://funkateer.github.io/quiz-app/welcome" target="_blank">Project</a>
 				<a class="button" href="https://github.com/Funkateer/quiz-app" target="_blank">Code</a>
 			</div>
@@ -145,6 +148,7 @@
 					<br><br>
 					Have a look at the code for more details!
 				</p>
+				<br>
 				<a class="button" href="https://funkateer.github.io/toVue-list/" target="_blank">Project</a>
 				<a class="button" href="https://github.com/Funkateer/toVue-list" target="_blank">Code</a>
 			</div>
@@ -159,6 +163,7 @@
 					<br><br>
 					Have a look at both app versions code for more details!
 				</p>
+				<br>
 				<a class="button" href="https://funkateer.github.io/Pokedex-simple-js-app/" target="_blank">Project</a>
 				<a class="button" href="https://github.com/Funkateer/Pokedex-simple-js-app" target="_blank">JS Code</a>
 				<a class="button" href="https://github.com/Funkateer/Pokedex-jQuery-app" target="_blank">jQuery Code</a>
@@ -173,6 +178,7 @@
 					<br><br>
 					Have a look at the code for more little things!
 				</p>
+				<br>
 				<a class="button" href=" https://funkateer.github.io/colorGame" target="_blank">Project</a>
 				<a class="button" href="https://github.com/Funkateer/colorGame" target="_blank">Code</a>
 			</div>
@@ -186,18 +192,20 @@
 					<br><br>
 					Have a look at the code for more details!
 				</p>
+				<br>
 				<a class="button hideFromMobile" href="https://funkateer.github.io/circles" target="_blank">Project</a>
 				<a class="button" href="https://github.com/Funkateer/circles" target="_blank">Code</a>
 			</div>
 
 			<div class="project-list__item">
-				<img src="img/yourProject-poster1.jpeg" class="project-list__img img" alt="picture illustrates a boat on a calm sea">
+				<img src="img/yourProject-poster.jpeg" class="project-list__img img" alt="picture illustrates a boat on a calm sea">
 				<h2>Your Project</h2>
 				<p>
 					I'm eager to be part of a developer team, I believe this is the best way to grow and become a better developer.
 					Have a look at <a href="AlaEddin-Abugrara-CV" target="_blank">my CV</a>
 					for a more detailed formation about my skills and experiences
 				</p>
+				<br>
 				<a href="contact" class="button">Lets get in touch</a>
 			</div>
 
