--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
 </head>
 <body>
 	<header class="page-header">
-		<a href="index"> <img src="img/logo.png" alt="personal logo" class="page-header__item navigation__logo img">
-			<div class="namelogo">
-				<span class="namelogo-name">ALA EDDIN ABUGRARA</span><br>
-				<span class="namelogo-caption">Web Developer </span>
-			</div>
+		<a href="index" class="my-logo">
+			<img src="img/logo.png" alt="personal logo" class="page-header__item navigation__logo img">
+			<span class="logo-name">ALA EDDIN ABUGRARA</span><br>
+			<span class="logo-caption">Web Developer </span>
 		</a>
 		<nav class="main-navigation page-header__item">
 		   <ul role="menubar" class="navigation-list">
