add my name variations to meta tags

--- a/about.html
+++ b/about.html
@@ -10,14 +10,13 @@
 	<link href="https://fonts.googleapis.com/css?family=Lato:700|Nunito:300&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
 	<!-- <link rel="stylesheet" type="text/css" href="dist/css/styles.production.min.css"> -->
-
 	<!-- DEV CSS -->
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
-
+	<!-- LINKS FOR SVG ANIMATION -->
 	<script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/TweenMax-latest-beta.js?v=333"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 	<script src="dist/js/svgAnimation.min.js"></script>
-	<title>About Me</title>
+	<title>About Me | Alà Eddin ( aladin ) Abugrara</title>
 </head>
 <body>
   <header class="page-header">
@@ -49,7 +48,7 @@
 		<h2 class="about-container__item">How I became a web developer</h2>
 		<p class="about-container__item">
 			My interest for programming started while I was observing my wife coding,
-			I was curious about those terminals full of lines of, what was for me then, gibberish! <br>
+			I was curious about those terminals full of lines of, what was for me then, gibberish!
 			The idea of writing scripts that gets executed by the computer was next to witchcraft to me, naturally, I wanted to learn it!
 
 		</p>
