--- a/contact.html
+++ b/contact.html
@@ -10,11 +10,9 @@
 	<link href="https://fonts.googleapis.com/css?family=Lato:700|Nunito:300&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
 	<!-- <link rel="stylesheet" type="text/css" href="dist/css/styles.production.min.css"> -->
-
 	<!-- DEV CSS -->
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
-
-	<title>Let's get in touch</title>
+	<title>Contacts - Let's get in touch | Ala eddin Abugrara</title>
 </head>
 <body>
 	<header class="page-header">
@@ -53,15 +51,15 @@
 			Skype: <a href="skype:alaabugrara?userinfo"> alaabugrara</a> <br>
 			Mail: <a href="mailto:alaeddin.abugrara@gmail.com">alaeddin.abugrara(at)gmail.com</a> <br>
 		</section>
-		<br>
-		
+		<br><br>
+
 		<div>
+			<p>Find me on</p>
 			<a href="https://github.com/Funkateer" title="Github" target="_blank"><img class="social-img" src="img/githubIcon.svg" alt="Github"></a>
 			<a href="https://twitter.com/Funk4teer" title="twitter" target="_blank"><img class="social-img" src="img/twitterIcon.svg" alt="Twitter"></a>
 			<a href="https://www.linkedin.com/in/al%C3%A0-eddin-abugrara-214ba5115/" title="Linked-in" target="_blank"><img class="social-img" src="img/linkedinIcon.svg" alt="LinkedIn"></a>
 		</div>
 		<br>
-
 		<form action="https://www.enformed.io/bbi7dw5v" method="POST" id="gform" class="contact-item">
 			<h2>Get in touch</h2>
 			<div>
@@ -88,10 +86,8 @@
 
 		</form>
 	</div>
-
 	<!-- <script src="dist/js/scripts.min.js"></script> -->
 	<script src="js/scripts.js"></script>
 	<!-- <script src="js/HTTPresponse.js"></script> -->
-
 </body>
 </html>
