--- a/work.html
+++ b/work.html
@@ -4,17 +4,15 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<meta name="description" content="Ala Eddin Abugrara contacts">
+	<meta name="description" content="Ala Eddin (aladin) Abugrara contacts">
 	<meta name="author" content="Ala Eddin Abugrara">
 	<link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">
 	<link href="https://fonts.googleapis.com/css?family=Lato:700|Nunito:300&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
 	<!-- <link rel="stylesheet" type="text/css" href="dist/css/styles.production.min.css"> -->
-
 	<!-- DEV CSS -->
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
-
-	<title>My Work</title>
+	<title>My Work | Alaeddin Abugrara</title>
 </head>
 <body>
 	<header class="page-header">
@@ -50,7 +48,7 @@
 				<p>
 					The very one you're looking at! <br>
 					I wrote my own portfolio from scratch using only HTML5 without the aid of third party libraries.
-					I took care of all aspects from the page <a href="file/Portfolio-UI.xd" download >designing</a>
+					I took care of all aspects from the page designing <!-- <a href="file/Portfolio-UI.xd" download >designing</a> -->
 					to the building stage, implementing various skills I gained like CSS processors, SEO optimization, HTML semantics,
 					mobile responsiveness and more
 					<br><br>
@@ -127,7 +125,7 @@
 
 			<div class="project-list__item">
 				<img src="img/quiz-app-poster.png" class="project-list__img img" alt="picture illustrates the quiz app built with Angular">
-				<h2>Quiz App</h2>
+				<h2>Angular Quiz App</h2>
 				<p>
 					A simple French and Math quiz app! Although simple this app shows my interest in diverse frameworks,
 					since I build it using the powerful Angular2 framework and used Angular and styled using <a href="https://material.angular.io/">Material</a>
@@ -154,7 +152,7 @@
 			</div>
 
 			<div class="project-list__item">
-				<img src="img/Pokemon-simple-js-app-poster.png" class="project-list__img img" alt="picture illustrates the Pokemon simple-js app project">
+				<img src="img/Pokedex-simple-js-app-poster.png" class="project-list__img img" alt="picture illustrates the Pokemon simple-js app project">
 				<h2>Pokedex Js App</h2>
 				<p>
 					With the help of an APIs I used vanilla Javascript to fetch and display modal cards with info and details about Pokémons.
