--- a/index.html
+++ b/index.html
@@ -4,16 +4,14 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<meta name="description" content="Ala Eddin Abugrara web developer portfolio landing page">
+	<meta name="description" content="Ala Eddin( aladin ) Abugrara web developer portfolio landing page">
 	<meta name="author" content="Ala Eddin Abugrara">
 	<link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">
 	<link href="https://fonts.googleapis.com/css?family=Lato:700|Nunito:300&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
 	<!-- <link rel="stylesheet" type="text/css" href="dist/css/styles.production.min.css"> -->
-
 	<!-- DEV CSS -->
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
-
 	<title>Ala Eddin Abugrara - Web Developer</title>
 </head>
 <body>
