change linkedin hadle from footer and fix minor linting errors

--- a/AlaEddin-Abugrara-CV.html
+++ b/AlaEddin-Abugrara-CV.html
@@ -8,7 +8,7 @@
   <!-- <link rel="stylesheet" type="text/css" href="dist/css/styles.production.min.css"> -->
 <!-- DEV CSS -->
 <link rel="stylesheet" type="text/css" href="css/styles.css">
-  <title>Ala Eddin Abugrara Resume</title>
+  <title>Ala Eddin Abugrara CV Resume</title>
 </head>
 <body>
   <header class="page-header">
@@ -49,7 +49,7 @@
 		<p>Find me on</p>
 		<a href="https://github.com/Funkateer" target="_blank"><img class="social-img" src="img/githubIcon.svg" alt="Github"></a>
 		<a href="https://twitter.com/Funk4teer" target="_blank"><img class="social-img" src="img/twitterIcon.svg" alt="Twitter"></a>
-		<a href="https://www.linkedin.com/in/al%C3%A0-eddin-abugrara-214ba5115/" target="_blank"><img class="social-img" src="img/linkedinIcon.svg" alt="LinkedIn"></a>
+		<a href="https://www.linkedin.com/in/Ala-Eddin-Abugrara/" target="_blank"><img class="social-img" src="img/linkedinIcon.svg" alt="LinkedIn"></a>
 	</footer>
 </body>
 </html>
