--- a/about.html
+++ b/about.html
@@ -170,11 +170,11 @@
 				<img class="tech-icon__img img" src="img/vsc.svg" alt="Visual Studio Code icon">
 				<span class="tooltip-text">VS Code</span>
 			</div>
-		</div> <!--tech-icon-->
+		</div> <!-- tech-icon -->
 
 		<a href="AlaEddin-Abugrara-CV" class="button hideFromMobile">View my CV</a>
 		<a href="file/AlaEddin-Abugrara-CV.pdf" class="button" download>Download B&W CV</a><br>
-  </div> <!-- about-container-->
+  </div> <!-- about-container -->
 
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20962 10601" shape-rendering="geometricPrecision" text-rendering="geometricPrecision" image-rendering="optimizeQuality" fill-rule="evenodd" clip-rule="evenodd">
 	<defs>
@@ -278,7 +278,7 @@
 		<p>Find me on</p>
 		<a href="https://github.com/Funkateer" target="_blank"><img class="social-img" src="img/githubIcon.svg" alt="Github"></a>
 		<a href="https://twitter.com/Funk4teer" target="_blank"><img class="social-img" src="img/twitterIcon.svg" alt="Twitter"></a>
-		<a href="https://www.linkedin.com/in/al%C3%A0-eddin-abugrara-214ba5115/" target="_blank"><img class="social-img" src="img/linkedinIcon.svg" alt="LinkedIn"></a>
+		<a href="https://www.linkedin.com/in/Ala-Eddin-Abugrara/" target="_blank"><img class="social-img" src="img/linkedinIcon.svg" alt="LinkedIn"></a>
 	</footer>
 </body>
 </html>
