--- a/work.html
+++ b/work.html
@@ -207,13 +207,13 @@
 				<a href="contact" class="button">Lets get in touch</a>
 			</div>
 
-		</div> <!--project list-->
-	</div> <!--work container-->
+		</div> <!-- project list -->
+	</div> <!-- work container -->
 	<footer>
 		<p>Find me on</p>
 		<a href="https://github.com/Funkateer" target="_blank"><img class="social-img" src="img/githubIcon.svg" alt="Github"></a>
 		<a href="https://twitter.com/Funk4teer" target="_blank"><img class="social-img" src="img/twitterIcon.svg" alt="Twitter"></a>
-		<a href="https://www.linkedin.com/in/al%C3%A0-eddin-abugrara-214ba5115/" target="_blank"><img class="social-img" src="img/linkedinIcon.svg" alt="LinkedIn"></a>
+		<a href="https://www.linkedin.com/in/Ala-Eddin-Abugrara/" target="_blank"><img class="social-img" src="img/linkedinIcon.svg" alt="LinkedIn"></a>
 	</footer>
 </body>
 </html>
