edit description and author meta tags in html pages, hopefully for the best

--- a/contact.html
+++ b/contact.html
@@ -4,15 +4,15 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<meta name="description" content="Ala Eddin Abugrara contacts such as address E-mail and phone number">
-	<meta name="author" content="Ala Eddin Abugrara">
+	<meta name="description" content="Ala Eddin | All sort of contacts you may need">
+	<meta name="author" content="Alà Eddin Abugrara">
 	<link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">
 	<link href="https://fonts.googleapis.com/css?family=Lato:700|Nunito:300&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
 	<!-- <link rel="stylesheet" type="text/css" href="dist/css/styles.production.min.css"> -->
 	<!-- DEV CSS -->
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
-	<title>Contacts - Let's get in touch | Ala eddin Abugrara</title>
+	<title>Contacts | Ala eddin 'Aladin' Abugrara</title>
 </head>
 <body>
 	<header class="page-header">
