--- a/AlaEddin-Abugrara-CV.html
+++ b/AlaEddin-Abugrara-CV.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="description" content="Ala Eddin Abugrara CV -curriculum vitae- Resume">
+	<meta name="author" content="Alà Eddin Abugrara">
 	<link href="https://fonts.googleapis.com/css?family=Lato:900|Nunito:300&display=swap" rel="stylesheet">
   <!-- <link rel="stylesheet" type="text/css" href="dist/css/styles.production.min.css"> -->
 <!-- DEV CSS -->
