--- a/about.html
+++ b/about.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<meta name="description" content="Information about Ala Eddin Abugrara">
-	<meta name="author" content="Ala Eddin Abugrara">
+	<meta name="description" content="=Ala Eddin Abugrara | A little bit about myself">
+	<meta name="author" content="Alà Eddin Abugrara">
 	<link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">
 	<link href="https://fonts.googleapis.com/css?family=Lato:700|Nunito:300&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
@@ -16,7 +16,7 @@
 	<script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/TweenMax-latest-beta.js?v=333"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 	<script src="dist/js/svgAnimation.min.js"></script>
-	<title>About Me | Alà Eddin ( aladin ) Abugrara</title>
+	<title>About Me | Ala Eddin 'Aladin' Abugrara</title>
 </head>
 <body>
   <header class="page-header">
