cancel unused classes in styles.css, rename tech-icon container

--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
 			of an ocean and I am going sailing!
 		</p>
 
-		<div class="tech-icon">
+		<div class="tech-icons">
 			<div class="tech-icon__item">
 				<img class="tech-icon__img img" src="img/html5.svg" alt="HTML5 icon">
 				<span class="tooltip-text">HTML5</span>
@@ -139,11 +139,6 @@
 			<div class="tech-icon__item">
 				<img class="tech-icon__img img" src="img/jest.svg" alt="Jest icon">
 				<span class="tooltip-text">Jest</span>
-			</div>
-
-			<div class="tech-icon__item">
-				<img class="tech-icon__img img" src="img/puppeteer.svg" alt="Puppeteer icon">
-				<span class="tooltip-text">Puppeteer</span>
 			</div>
 
 			<div class="tech-icon__item">
@@ -278,7 +273,7 @@
 		<p>Find me on</p>
 		<a href="https://github.com/Funkateer" target="_blank"><img class="social-img" src="img/githubIcon.svg" alt="Github"></a>
 		<a href="https://twitter.com/Funk4teer" target="_blank"><img class="social-img" src="img/twitterIcon.svg" alt="Twitter"></a>
-		<a href="https://www.linkedin.com/in/Ala-Eddin-Abugrara/" target="_blank"><img class="social-img" src="img/linkedinIcon.svg" alt="LinkedIn"></a>
+		<a href="https://www.linkedin.com/in/Alaeddin-abugrara/" target="_blank"><img class="social-img" src="img/linkedinIcon.svg" alt="LinkedIn"></a>
 	</footer>
 </body>
 </html>
