move SVG animation inside about-container and change its size and legend

--- a/work.html
+++ b/work.html
@@ -50,8 +50,8 @@
 					I wrote my own portfolio from scratch using only HTML5 without the aid of third party libraries.
 					I took care of all aspects from the page designing <!-- <a href="file/Portfolio-UI.xd" download >designing</a> -->
 					to the building stage, implementing various skills I gained like CSS processors, SEO optimization, HTML semantics,
-					mobile responsiveness and more
-					<br><br>
+					mobile responsiveness and more <br>
+					<br>
 					Have a look at the code for more details!
 				</p>
 				<br>
@@ -65,8 +65,8 @@
 					A web app that allows to login to their profile, search and displays list of movies,
 					info like plot genre and director. Users can also add movies to their Favorite Movies list and
 					change their profile info or cancel the account . Back-end is built using Node.js and Express,
-					hooked to a local API. Front-end build with REACT and Bootstrap, the app was deployed on Heroku
-					<br><br>
+					hooked to a local API. Front-end build with REACT and Bootstrap, the app was deployed on Heroku <br>
+					<br>
 					Have a look at the code for more detailed list of technologies used for this app!
 				</p>
 				<br>
@@ -83,8 +83,8 @@
 					API to fetch upcoming events visualized in plot or pie charts and much more. <br>
 					The app is built with a test-driven development method using Jest and Puppeteers for
 					<a href="https://github.com/Funkateer/meetup/tree/master/src/__tests__" target="_blank">tests</a>,
-					the back-end functions are hosted in AWS
-					<br><br>
+					the back-end functions are hosted in AWS <br>
+					<br>
 					Have a look at the code for more details or try the deployed app!
 				</p>
 				<br>
@@ -100,8 +100,8 @@
 					store them locally so it's usable offline and has the feature to share images and location.The app interface is build with Gifted-Chat Library
 					and other react-native libraries for the different features, Google firebase as database,
 					<a href="https://github.com/Funkateer/shatApp/tree/master/out" target="_blank">Documentations</a>
-					are auto generated using JSDoc and finally Expo for building and testing
-					<br><br>
+					are auto generated using JSDoc and finally Expo for building and testing <br>
+					<br>
 					Have a look at the code for more details!
 				</p>
 				<br>
@@ -114,8 +114,8 @@
 				<p>
 					CampGrounds is a YELP-like web app, Users can log in add and rate camping grounds they visited or advertise to other camping enthusiasts!
 					Users can also add edit or delete their comments in a CRUD fashion. Front-end is build with Js and Bootstrap,
-					the back-end is build with Node.js and Express
-					<br><br>
+					the back-end is build with Node.js and Express <br>
+					<br>
 					Have a look at the code for more details!
 				</p>
 				<br>
@@ -128,8 +128,8 @@
 				<h2>Angular Quiz App</h2>
 				<p>
 					A simple French and Math quiz app! Although simple this app shows my interest in diverse frameworks,
-					since I build it using the powerful Angular2 framework and used Angular and styled using <a href="https://material.angular.io/">Material</a>
-					<br><br>
+					since I build it using the powerful Angular2 framework and used Angular and styled using <a href="https://material.angular.io/">Material</a> <br>
+					<br>
 					Have a look at the code for more details!
 				</p>
 				<br>
@@ -142,8 +142,8 @@
 				<h2>ToVue List</h2>
 				<p>
 					The evergreen todo list app, for such simple and popular tasks I decided to use the super awesome Vue library.
-					I loved Vue’s workflow and I’m looking forward to using it again. I used Material for the styling
-					<br><br>
+					I loved Vue’s workflow and I’m looking forward to using it again. I used Material for the styling <br>
+					<br>
 					Have a look at the code for more details!
 				</p>
 				<br>
@@ -157,8 +157,8 @@
 				<p>
 					With the help of an APIs I used vanilla Javascript to fetch and display modal cards with info and details about Pokémons.
 					I also made a <a href="https://funkateer.github.io/Pokedex-jQuery-app/">clone of this app</a> where all the Javascript logic and CSS was replaced
-					by jQuery and Bootstrap 4!
-					<br><br>
+					by jQuery and Bootstrap 4! <br>
+					<br>
 					Have a look at both app versions code for more details!
 				</p>
 				<br>
@@ -172,8 +172,8 @@
 				<h2>RGB Color Game</h2>
 				<p>
 					A vanilla Javascript game where you guess the color of random RGB value choosing between 3 or 9 possible colors whether playing in easy or hard mode,
-					it’s a fun way to practice the RGB parameters!
-					<br><br>
+					it’s a fun way to practice the RGB parameters! <br>
+					<br>
 					Have a look at the code for more little things!
 				</p>
 				<br>
@@ -186,8 +186,8 @@
 				<h2>Circles</h2>
 				<p>
 					Using visual and sound effect I made this fun app, the keyboard generate a colored expanding dot on the screen and a paired sound,
-					it can get pretty addicting if you start to feel the beat! I used paper-full library to generate the shapes and howler for the sounds
-					<br><br>
+					it can get pretty addicting if you start to feel the beat! I used paper-full library to generate the shapes and howler for the sounds<br>
+					<br>
 					Have a look at the code for more details!
 				</p>
 				<br>
