fix about-container width and svg on mobile

--- a/about.html
+++ b/about.html
@@ -168,7 +168,7 @@
 		</div> <!-- tech-icon -->
 
 		<a href="AlaEddin-Abugrara-CV" class="button hideFromMobile">View my CV</a>
-		<a href="file/AlaEddin-Abugrara-CV.pdf" class="button" download>Download B&W CV</a><br>
+		<a href="file/AlaEddin-Abugrara-CV.pdf" class="button" download>Download B&W CV</a>
 
 		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20962 10601" shape-rendering="geometricPrecision" text-rendering="geometricPrecision" image-rendering="optimizeQuality" fill-rule="evenodd" clip-rule="evenodd">
 		<defs>
